--- a/src/scss/_components-type.scss
+++ b/src/scss/_components-type.scss
@@ -52,6 +52,7 @@ h3, .h3 {
   text-transform: uppercase;
   margin-top: $line-height-base-computed;
   margin-bottom: ($line-height-base-computed / 2);
+  word-break: break-all;
 }
 
 h1, .h1 { font-size: $font-size-h1; }
