--- a/src/scss/_organism-introduction.scss
+++ b/src/scss/_organism-introduction.scss
@@ -2,7 +2,7 @@
 // Einleitung (Rundgang)
 // --------------------------------------------------
 
-.introduction {
+#main {
   margin-top: $space-large-plus-vertical * 6;
   @media (max-width: $screen-md-max) {
     margin-top: $space-large-plus-vertical * 1.5;
