--- a/src/scss/_helpers-toggling-content.scss
+++ b/src/scss/_helpers-toggling-content.scss
@@ -27,6 +27,10 @@
   border: 0;
 }
 
+.hidden-text {
+  @include text-hide();
+}
+
 // Only display content to screen readers
 // See: http://a11yproject.com/posts/how-to-hide-content/
 
