--- a/src/scss/_components-type.scss
+++ b/src/scss/_components-type.scss
@@ -26,12 +26,12 @@ $line-height-large-computed: floor(($font-size-base * $line-height-large)) !defa
 $line-height-large-plus-computed: floor(($font-size-base * $line-height-large-plus)) !default; // 72px
 
 
-$font-size-h1: floor(($font-size-base * 2.5)) !default; // 40px
-$font-size-h2: floor(($font-size-base * 2)) !default; // 32px
-$font-size-h3: ceil(($font-size-base * 1.5)) !default; // 24px
-$font-size-h4: ceil(($font-size-base * 1.25)) !default; // 20px
+$font-size-h1: ($font-size-base * 2.5) !default; // 40px
+$font-size-h2: ($font-size-base * 2) !default; // 32px
+$font-size-h3: ($font-size-base * 1.5) !default; // 24px
+$font-size-h4: ($font-size-base * 1.25) !default; // 20px
 $font-size-h5: $font-size-base !default;  //16px
-$font-size-h6: ceil(($font-size-base * 0.875)) !default; // ~12px
+$font-size-h6: ($font-size-base * 0.875) !default; // ~12px
 
 $headings-font-family: 'aileronsregular', Helvetica Neue, Helvetica, Arial, sans-serif !default;
 $headings-font-weight: 500 !default;
@@ -61,16 +61,11 @@ h3, .h3 { font-size: $font-size-h3; }
 
 // h4, h5, h6 wie body
 
-h4, .h4 {
-  text-transform: uppercase;
-  font-weight: 400;
-  margin: 0 0 $line-height-small-computed;
-}
-
-h5, .h5 {
-  color: $headings-color;
+h4, .h4, h5, .h5 {
+  font-size: $font-size-base;
+  color: $text-color;
   font-weight: 600;
-  margin: $line-height-small-computed 0;
+  margin: 0 0 $line-height-small-computed;
 }
 
 // Body text
@@ -99,6 +94,17 @@ p {
 .text-uppercase      { text-transform: uppercase; }
 .text-capitalize     { text-transform: capitalize; }
 
+// Selection
+// -------------------------
+
+::selection {
+  color: $white;
+  background: $brand-primary;
+}
+::-moz-selection {
+  color: $white;
+  background: $brand-primary;
+}
 
 // Links
 // -------------------------
