--- a/src/scss/_helpers-position.scss
+++ b/src/scss/_helpers-position.scss
@@ -6,6 +6,7 @@
 // -------------------------
 
 @mixin center-block() {
+  float: none;
   display: block;
   margin-left: auto;
   margin-right: auto;
@@ -15,12 +16,17 @@
   @include center-block;
 }
 
+.center {
+  margin-left: auto;
+  margin-right: auto;
+}
+
 // Floats
 
 .pull-right {
-  float: right !important;
+  float: right;
 }
 
 .pull-left {
-  float: left !important;
+  float: left;
 }
