--- a/src/scss/_organism-slick.scss
+++ b/src/scss/_organism-slick.scss
@@ -1,209 +1,109 @@
-//
-// Slick Image Gallery
-// --------------------------------------------------
-
 @charset 'UTF-8';
-/* Slider copied from the default styling*/
 
-.slick-loading .slick-list
-{
-    background: #fff url('./ajax-loader.gif') center center no-repeat;
+// loader
+//.slick-loading, .slick-loading:before, .slick-loading:after
+%extend_loader_1 {
+  border-radius: 50%;
+  width: 2.5em;
+  height: 2.5em;
+  animation-fill-mode: both;
+  animation: load_ani 1.8s infinite ease-in-out;
 }
 
-/* Icons */
-@font-face
-{
-    font-family: 'slick';
-    font-weight: normal;
-    font-style: normal;
-
-    src: url('./fonts/slick.eot');
-    src: url('./fonts/slick.eot?#iefix') format('embedded-opentype'), url('./fonts/slick.woff') format('woff'), url('./fonts/slick.ttf') format('truetype'), url('./fonts/slick.svg#slick') format('svg');
-}
-/* Arrows */
-.slick-prev,
-.slick-next
-{
-    font-size: 0;
-    line-height: 0;
-
-    position: absolute;
-    top: 50%;
-
-    display: block;
-
-    width: 20px;
-    height: 20px;
-    padding: 0;
-    -webkit-transform: translate(0, -50%);
-    -ms-transform: translate(0, -50%);
-    transform: translate(0, -50%);
-
-    cursor: pointer;
-
-    color: transparent;
-    border: none;
-    outline: none;
-    background: transparent;
-}
-.slick-prev:hover,
-.slick-prev:focus,
-.slick-next:hover,
-.slick-next:focus
-{
-    color: transparent;
-    outline: none;
-    background: transparent;
-}
-.slick-prev:hover:before,
-.slick-prev:focus:before,
-.slick-next:hover:before,
-.slick-next:focus:before
-{
-    opacity: 1;
-}
-.slick-prev.slick-disabled:before,
-.slick-next.slick-disabled:before
-{
-    opacity: .25;
+//.slick-loading:before, .slick-loading:after
+%extend_loader_2 {
+  content: '';
+  position: absolute;
+  top: 0;
 }
 
-.slick-prev:before,
-.slick-next:before
-{
-    font-family: 'slick';
-    font-size: 20px;
-    line-height: 1;
-
-    opacity: .75;
-    color: white;
-
-    -webkit-font-smoothing: antialiased;
-    -moz-osx-font-smoothing: grayscale;
+@keyframes load_ani {
+  0% { @include box-shadow(0 2.5em 0 -1.3em); }
+  40% { @include box-shadow(0 2.5em 0 0); }
+  80% { @include box-shadow(0 2.5em 0 -1.3em); }
+  100% { @include box-shadow(0 2.5em 0 -1.3em); }
 }
 
-.slick-prev
-{
-    left: -25px;
-}
-[dir='rtl'] .slick-prev
-{
-    right: -25px;
-    left: auto;
-}
-.slick-prev:before
-{
-    content: 'â†';
-}
-[dir='rtl'] .slick-prev:before
-{
-    content: 'â†’';
-}
+.slick-loading {
+  @extend %extend_loader_1;
+  color: $brand-primary;
+  font-size: 10px;
+  margin:  10em auto;
+  position: relative;
+  transform: translateZ(0);
+  animation-delay: -0.16s;
 
-.slick-next
-{
-    right: -25px;
-}
-[dir='rtl'] .slick-next
-{
-    right: auto;
-    left: -25px;
-}
-.slick-next:before
-{
-    content: 'â†’';
-}
-[dir='rtl'] .slick-next:before
-{
-    content: 'â†';
+  &:before {
+    @extend %extend_loader_1;
+    @extend %extend_loader_2;
+    left: -3.5em;
+    animation-delay: -0.32s;
+  }
+
+  &:after {
+    @extend %extend_loader_1;
+    @extend %extend_loader_2;
+    left: 3.5em;
+  }
 }
 
-/* Dots */
-.slick-dotted.slick-slider
-{
-    margin-bottom: 30px;
+// buttons
+%extend_reset_button {
+  padding: 0;
+  color: $brand-primary;
+  outline: none;
+  border: none;
+  background: transparent;
 }
 
-.slick-dots
-{
-    position: absolute;
-    bottom: -25px;
+.slick-prev {
+  @extend %extend_reset_button;
 
-    display: block;
+  &:before {
+    color: inherit;
+    content: "\2190\a0";
+  }
 
-    width: 100%;
-    padding: 0;
-    margin: 0;
+  &:focus {
+    @extend %extend_reset_button;
+  }
 
-    list-style: none;
-
-    text-align: center;
+  &:hover {
+    @extend %extend_reset_button;
+    text-decoration: underline;
+  }
 }
-.slick-dots li
-{
-    position: relative;
 
-    display: inline-block;
+.slick-next {
+  @extend %extend_reset_button;
 
-    width: 20px;
-    height: 20px;
-    margin: 0 5px;
-    padding: 0;
+  &:after {
+    color: inherit;
+    content: "\a0\2192";
+  }
 
-    cursor: pointer;
+  &:focus {
+    @extend %extend_reset_button;
+  }
+
+  &:hover {
+    @extend %extend_reset_button;
+    text-decoration: underline;
+  }
 }
-.slick-dots li button
-{
-    font-size: 0;
-    line-height: 0;
 
-    display: block;
-
-    width: 20px;
-    height: 20px;
-    padding: 5px;
-
-    cursor: pointer;
-
-    color: transparent;
-    border: 0;
-    outline: none;
-    background: transparent;
+.slick-initialized .slick-slide {
+  cursor: url(..\img\slider\arrow.png), auto;
 }
-.slick-dots li button:hover,
-.slick-dots li button:focus
-{
-    outline: none;
-}
-.slick-dots li button:hover:before,
-.slick-dots li button:focus:before
-{
-    opacity: 1;
-}
-.slick-dots li button:before
-{
-    font-family: 'slick';
-    font-size: 6px;
-    line-height: 20px;
 
-    position: absolute;
-    top: 0;
-    left: 0;
+.controlls {
+  button, button.pull-right {
+    @media (max-width: $screen-xs-max) {
+      @include center-block;
+    }
+  }
 
-    width: 20px;
-    height: 20px;
-
-    content: 'â€¢';
-    text-align: center;
-
-    opacity: .25;
-    color: black;
-
-    -webkit-font-smoothing: antialiased;
-    -moz-osx-font-smoothing: grayscale;
-}
-.slick-dots li.slick-active button:before
-{
-    opacity: .75;
-    color: black;
+  p {
+    margin-bottom: 0;
+  }
 }
