--- a/src/scss/site.scss
+++ b/src/scss/site.scss
@@ -24,4 +24,4 @@
 @import "organism-introduction";
 @import "organism-maps";
 @import "organism-room";
-//@import "organism-slick";
+@import "organism-slick";
