max-width for the site

--- a/src/scss/_grid.scss
+++ b/src/scss/_grid.scss
@@ -70,6 +70,7 @@ $container-lg:                 $container-large-desktop !default;
 
 .container-fluid {
   @include container-fixed();
+  max-width: 1640px;
 }
 
 
