--- a/src/scss/_organism-slick.scss
+++ b/src/scss/_organism-slick.scss
@@ -2,7 +2,60 @@
 
 .image-gallery{
   margin-bottom: $space-large-plus-vertical;
+  position: relative;
 }
+
+.slick-initialized .controll-mouse-left {
+  cursor: url(..\img\slider\arrow-left.png), auto;
+  content: "";
+  display: block;
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 50%;
+  z-index: 1000;
+}
+.slick-initialized .controll-mouse-right {
+  cursor: url(..\img\slider\arrow-right.png), auto;
+  content: "";
+  display: block;
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 50%;
+  right: 0;
+  z-index: 1000;
+}
+
+.slider-nav  {
+  margin: $space-small-vertical 0;
+  cursor: grab;
+
+  @media (max-width: $screen-xs-max) {
+    display: none !important;
+  }
+
+
+  .picture {
+    margin: 0 10px;
+    position: relative;
+  }
+
+  .slick-current {
+    &:before {
+      content: "";
+      display: block;
+      position: absolute;
+      top: 0;
+      bottom: 0;
+      left: 0;
+      right: 0;
+      background: rgba(211, 168, 124, 0.8);
+    }
+  }
+}
+
 // loader
 //.slick-loading, .slick-loading:before, .slick-loading:after
 %extend_loader_1 {
@@ -93,10 +146,6 @@
     @extend %extend_reset_button;
     text-decoration: underline;
   }
-}
-
-.slick-initialized .slick-slide {
-  cursor: url(..\img\slider\arrow.png), auto;
 }
 
 .controlls {
